# DRL_Project

./: .gitignore  FILE_LISTING.md  README.md
robot-routes/: .gitignore  BLOCKED.md  Dockerfile  ISSUES.md  Makefile  README.md  TECHNICAL_SPEC.md  pyproject.toml
robot-routes/.cursor/: rules
robot-routes/.github/workflows/: ci.yml
robot-routes/TASKS/: wp1.yaml  wp2.yaml  wp3.yaml  wp4.yaml  wp5.yaml  wp6.yaml  wp7.yaml  wp8.yaml
robot-routes/calibration/: .calibration_status.json  delta.json
robot-routes/configs/: grid.yaml  grid_7day.yaml  pipeline.yaml
robot-routes/configs/env/: panda_reach.yaml
robot-routes/configs/eval/: default.yaml
robot-routes/configs/expert/: rrt_connect.yaml
robot-routes/configs/handoff/: dagger_anchored_probe.yaml  day_overrides.yaml  full_defaults.yaml  full_overrides.yaml
robot-routes/configs/train/: bc.yaml  curriculum.yaml  dagger_rac.yaml  (+1 more)
robot-routes/data/: pool_rl.json
robot-routes/scripts/: 00_smoke.py  01_collect_bc_demos.py  02_train_bc.py  03_run_dagger_rac.py  04_run_curriculum.py  05_train_rl_diversity.py  06_evaluate.py  07_launch_grid.py  autonomous_handoff.py  benchmark_smoke_run.py  calibrate_delta.py  check_constants.py  check_spec_constants.py  day_to_grid_handoff.py  generate_scene_sets.py  grid_5day_handoff.py  mdn_diversity_probe.py  plan_5day_grid.py  ppo_apex_test.py  preflight.py  render_mujoco_showcase.py  render_showcase.sh  run_pipeline.py  watch_pipeline.py  watch_plan.py
robot-routes/tests/: test_api_assumptions.py  test_contracts.py  test_dagger_checkpoint.py  test_dagger_resume.py  test_device.py  test_diversity_metrics.py  test_env.py  test_expert.py  test_gates.py  test_gpu_alloc.py  test_gpu_oom.py  test_handoff_remediate.py  test_integration.py  test_pipeline_progress.py  test_plan_progress.py  test_ppo.py  test_ppo_force.py  test_progress.py  test_rewind.py  test_scene_sets.py  test_stage_progress.py  test_stage_resume.py  test_watchdog.py
(+66 files in other folders)
