[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-routes"
version = "0.1.0"
description = "Teaching a Robot Arm Many Ways to Reach a Goal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.2",
    "gymnasium>=0.29",
    "torch>=2.3",
    "numpy",
    "scipy",
    "h5py",
    "pyyaml",
    "matplotlib",
    "pynvml>=11",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy", "types-PyYAML"]

# PyPI torch wheels target CUDA 13; use PyTorch index matching local driver (CUDA 12.8).
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/robot_routes"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F401", "F841", "E741"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["type-arg", "no-any-return", "misc", "attr-defined", "operator", "assignment", "union-attr", "arg-type", "call-arg", "return-value"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "wp1: work package 1",
    "wp2: work package 2",
    "wp3: work package 3",
    "wp4: work package 4",
    "wp5: work package 5",
    "wp6: work package 6",
    "wp7: work package 7",
    "wp8: work package 8",
]
